# lxcraft

./: .cruft.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPMENT.md  Justfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  setup.cfg  setup.py  tasks.py  tox.ini
.github/workflows/: docker-test.yaml  multi-test.yaml  release.yaml
develop/: docker-bash  docker-bash.py  docker.sh  just-test.sh  setup.sh
docs/: debugging.md  resource.md
lxcraft/: __init__.py  base.py  debug.py  plan.py  plan_element.py  resource.py  system.py  user.py
lxcraft/debian/: __init__.py  apt_package.py  package.py  service.py
lxcraft/path/: __init__.py  directory.py  filecontent.py  files.py
lxcraft/python/: __init__.py  pip_package.py  pip_packages.py
lxcraft/user/: user.py
samples/: fastapi_uvicorn_gunicorn_supervisor.py
samples/templates/: gunicorn_start
tests/: clean.sh  test_apt_package.py  test_debian_package.py  test_debug.py  test_directory.py  test_fastapi_uvicorn_gunicorn_supervisor.py  test_file_content.py  test_filecontent.py  test_pip_package.py  test_plan.py  test_plan_element.py  test_resource.py  test_resourrce.py  test_user.py
tests/template/: test.txt  wwwkindos.conf
tests/templates/: gunicorn_start  test.txt  wwwkindos.conf
