[metadata]
name = lxcraft
description = A simple declarative configuration build tool for Linux systems
author = João Pinto
author_email = lamego.pinto@gmail.com
url = https://github.com/joaompinto/lxcraft
license = MIT
license_file = LICENSE

[options]
packages = find_namespace:
setup_requires =
    setuptools_scm
    wheel

[options.entry_points]
console_scripts =
    lxcraft = lxcraft.__main__:__main__
